# GEST

./: .dockerignore  .env.local  .gitignore  README.md  config.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
data/: blacklist.csv  blacklist_eval_gemma3-e2e.csv  blacklist_eval_gemma3-gest-e2e.csv  blacklist_eval_gemma3-gest-generation-only.csv  blacklist_eval_gpt-oss-e2e.csv  blacklist_eval_gpt-oss-generation-only.csv  blacklist_eval_gpt-oss-gest-e2e.csv  blacklist_eval_gpt-oss-gest-generation-only.csv  gest_eval_gemma3-e2e.csv  gest_eval_gemma3-gest-e2e.csv  gest_eval_gemma3-gest-generation-only.csv  gest_eval_gpt-oss-e2e.csv  gest_eval_gpt-oss-generation-only.csv  gest_eval_gpt-oss-gest-e2e.csv  gest_eval_gpt-oss-gest-generation-only.csv  gest_manual.csv
notebooks/: activitynet-captions_generation_statistics.ipynb  gemma_3_270m_text2gest_finetune.ipynb  gpt_oss_20b_text2gest_finetune.ipynb  manual_labeling.ipynb  manual_vs_generated_evaluation_graph_matching.ipynb  manual_vs_synthetic_evaluation_graph_matching.ipynb  synthetic-val-1_vs_synthetic-val-2_evaluation_graph_matching.ipynb
notebooks/data/: dedupe_report_standard.csv  graph_matching_detection_metrics.csv  manual_vs_synthetic_evaluation_graph_matching.csv  manual_vs_synthetic_evaluation_graph_matching_negatives.csv  manual_vs_synthetic_negative_pairs_list.csv  synthetic-val-1_vs_synthetic-val-2_evaluation_graph_matching.csv  synthetic-val-1_vs_synthetic-val-2_evaluation_graph_matching_negatives.csv  (+1 more)
scripts/: init_gcloud.sh
src/gest/: __init__.py  main.py
(+49 files in other folders)
